# personal-finance-hackathon

./: .gitignore  README-ia.md  README.md  main.py  manage.py  pyproject.toml  requirements.txt
.docs/: README.md  diagrama-geral.excalidraw
.github/: copilot-instructions.md
.github/instructions/: account.instructions.md  dashboard.instructions.md  finance.instructions.md
.github/prompts/: configurar_app_novo.prompt.md  criar_nova_feature.prompt.md  criar_templates_htmx.prompt.md
account/: admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/repositories/: __init__.py  user_repository.py
account/services/: __init__.py  auth_service.py
core/: mixins.py  models.py
core/bases/: __init__.py  models.py  repositories.py  services.py  views.py
dashboard/: forms.py  tests.py  urls.py  views.py
finance/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
finance/migrations/: 0001_initial.py
finance/repositories/: __init__.py  categoria_repository.py  lancamento_repository.py
finance/services/: __init__.py  categoria_service.py  lancamento_service.py  saldo_service.py
personal_finance_hackathon/config/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: components.css  dashboard.css  layout.css
static/js/: base.js  dashboard.js  sidebar.js
staticfiles/css/: base.css  dashboard.css  layout.css
staticfiles/js/: dropdown.js
templates/: 404.html  base.html  base_formulario.html  base_formulario_publico.html  base_list.html  base_public.html
templates/components/: confirm_action_form.html
(+29 files in other folders)
