[project]
name = "personal-finance-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "django==6.0.3",
    "django-htmx==1.27.0",
    "pillow==12.1.1",
    "playwright==1.58.0",
    "sqlparse==0.5.5",
]
